javascript rollup & compression with rs.js excluding handlebars, added script tag translation

--- a/template/SingleColumnTemplate.hbs
+++ b/template/SingleColumnTemplate.hbs
@@ -3,3 +3,7 @@
     <section class="appBody"></section>
     <footer class="appFooter"></footer>
 </article>
+<!--#script>
+    var module = {};
+</script#-->
+<!--#script src="index.js"></script#-->
