add CSS serving

--- a/template/SingleColumnTemplate.hbs
+++ b/template/SingleColumnTemplate.hbs
@@ -1,5 +1,7 @@
 <article class="appContent">
-    <header class="appHeader"></header>
+    <header class="appHeader">
+        <link rel="stylesheet" type="text/css" href="index.css"/>
+    </header>
     <section class="appBody"></section>
     <footer class="appFooter"></footer>
 </article>
