comply with handlebars library and use ".handlebars" extension, update to IDE to recognize extension added invalidation of all views when a view is updated; don't know dependency tree, so invalidate all views Add old background images -- temporarily Add Head View

--- a/template/SingleColumnTemplate.handlebars
+++ b/template/SingleColumnTemplate.handlebars
@@ -1,7 +1,5 @@
 <article class="appContent">
-    <header class="appHeader">
-        <link rel="stylesheet" type="text/css" href="index.css"/>
-    </header>
+    <header class="appHeader"></header>
     <section class="appBody"></section>
     <footer class="appFooter"></footer>
 </article>
