refactor relationship between the page template (SingleColumn and Head) and page application (TvFinderApp) and its views (e.g., SiteHeader, Greeting) append to the page template slots.

--- a/template/Head.handlebars
+++ b/template/Head.handlebars
@@ -1,2 +1,2 @@
-<title>{{title}}</title>
+<title>Walmart.com: Save Money. Live Better.</title>
 <link rel="stylesheet" type="text/css" href="index.css"/>
