--- a/template/SingleColumnTemplate.handlebars
+++ b/template/SingleColumnTemplate.handlebars
@@ -3,4 +3,34 @@
     <section class="appBody"></section>
     <footer class="appFooter"></footer>
 </article>
-<!--#script src="index.js"></script#-->
+<!--#script src="/usr/local/lib/node_modules/requirejs/require.js"></script#-->
+<!--#script>
+    require.config({
+        "paths": {
+            //"index": "js/TvFinderApp", // uncomment to disable rollup
+            "handlebars": "lib/handlebars.runtime",
+            "Backbone": "/usr/local/lib/node_modules/backbone/backbone",
+            "jQuery": "lib/jquery-1.7.2",
+            "underscore": "/usr/local/lib/node_modules/underscore/underscore"
+        },
+        "shim": {
+            "Backbone": {
+                "deps": [
+                    "underscore",
+                    "jQuery"
+                ],
+                "exports": "Backbone"
+            },
+            "jQuery": {
+                "exports": "$"
+            },
+            "underscore": {
+                "exports": "_"
+            },
+            "handlebars": {
+                "exports": "Handlebars"
+            }
+        }
+    });
+    var tvFinder = require(["index"]);
+</script#-->
