--- a/template/TvFinderPov.handlebars
+++ b/template/TvFinderPov.handlebars
@@ -1,7 +1,7 @@
-<h1 class="tvFinderHeader">Get More, For Less</h1>
+<h1>Get More, For Less</h1>
 
-<h2 class="tvFinderDescription">Find the perfect Television with our new <a class="tvFinderLink" href="#"
-                                                                            title="TVFinder">TVFinder&trade;</a>
+<h2>Find the perfect Television with our new <a class="tvFinderLink" href="#"
+                                                title="TVFinder">TVFinder&trade;</a>
 </h2>
 
 <div class="tvFinderOffers">
