--- a/template/SingleColumnTemplate.handlebars
+++ b/template/SingleColumnTemplate.handlebars
@@ -3,11 +3,11 @@
     <section class="appBody"></section>
     <footer class="appFooter"></footer>
 </article>
-<!--#script src="/usr/local/lib/node_modules/requirejs/require.js"></script#-->
-<!--#script>
+<script src="/usr/local/lib/node_modules/requirejs/require.js"></script>
+<script>
     require.config({
         "paths": {
-            //"index": "js/TvFinderApp", // uncomment to disable rollup
+            //"index": "js/TvFinderApp", // uncomment to get individuall
             "handlebars": "lib/handlebars.runtime",
             "Backbone": "/usr/local/lib/node_modules/backbone/backbone",
             "jQuery": "lib/jquery-1.7.2",
@@ -32,5 +32,5 @@
             }
         }
     });
-    require(["index"]);
-</script#-->
+    var tvFinder = require(["index"]);
+</script>
