--- a/css/tvFinder.css
+++ b/css/tvFinder.css
@@ -475,22 +475,23 @@ a:focus {
     display: block;
 }
 
-.tvFinderOffer {
+.tvFinderOfferContainer article {
     width: 224px;
     display: inline-block;
     padding: 10px;
 }
 
-.tvFinderProduct {
+.tvFinderOfferContainer h1 {
     line-height: 18px;
     margin-bottom: 6px;
 }
 
-.tvFinderProductLink {
+.tvFinderOfferContainer a {
     width: 224px;
 }
 
-.tvFinderProductImage {
+.tvFinderOfferContainer img,
+.tvFinderOfferContainer i {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -547,7 +548,7 @@ a:focus {
     background: url(../image/star.png) repeat-x;
 }
 
-.tvFinderProductRatingSummary {
+.tvFinderProductRating span {
     display: block;
     height: 12px;
     background: url(../image/star.png) repeat-x 0 -13px;
