extensive refactoring, eliminate unnecessary models

--- a/template/TvFinderSortControl.handlebars
+++ b/template/TvFinderSortControl.handlebars
@@ -1,14 +1,14 @@
 Sort
 <div class="btn-group tvFinderControl">
-    <a class="btn btn-large dropdown-toggle" data-toggle="dropdown" href="#">
+    <a class="btn btn-large dropdown-toggle" data-toggle="dropdown" data-value="Featured-asc" href="#">
         Featured
         <span class="caret"></span>
     </a>
     <ul class="dropdown-menu" data-role="sort">
-        <li class="tvFinderMenuChoice"><a href="#" data-asc="true">Featured</a></li>
-        <li class="tvFinderMenuChoice"><a href="#" data-asc="true">Price</a></li>
-        <li class="tvFinderMenuChoice"><a href="#" data-asc="false">Rating</a></li>
-        <li class="tvFinderMenuChoice"><a href="#" data-asc="true">Name</a></li>
-        <li class="tvFinderMenuChoice"><a href="#" data-asc="true">Size</a></li>
+        <li class="tvFinderMenuChoice"><a href="#" data-value="Featured-asc">Featured</a></li>
+        <li class="tvFinderMenuChoice"><a href="#" data-value="Price-asc">Price</a></li>
+        <li class="tvFinderMenuChoice"><a href="#" data-value="Rating-des">Rating</a></li>
+        <li class="tvFinderMenuChoice"><a href="#" data-value="Name-asc">Name</a></li>
+        <li class="tvFinderMenuChoice"><a href="#" data-value="Size-asc">Size</a></li>
     </ul>
 </div>
