--- a/template/SingleColumnTemplate.handlebars
+++ b/template/SingleColumnTemplate.handlebars
@@ -7,7 +7,7 @@
 <script>
     require.config({
         "paths": {
-            "app/TvFinderApp": "index", // comment to get individually
+            //"app/TvFinderApp": "index", // comment to get components individually
             "handlebars": "/usr/local/lib/node_modules/handlebars/dist/handlebars.runtime",
             "Backbone": "/usr/local/lib/node_modules/backbone/backbone",
             "underscore": "/usr/local/lib/node_modules/underscore/underscore",
@@ -59,7 +59,7 @@
     require(['app/TvFinderApp'], function (tvFinderAppPromise) {
                 tvFinderAppPromise.then(
                         function (tvFinderApp) {
-                            tvFinderApp.start();
+                            tvFinderApp();
                         },
                         function (error) {
                             console.log(error);
