--- a/template/TvFinderBrandControl.handlebars
+++ b/template/TvFinderBrandControl.handlebars
@@ -1,13 +1,13 @@
 Brand
 <div class="btn-group tvFinderControl">
-    <a class="btn btn-large dropdown-toggle" data-toggle="dropdown" href="#">
+    <a class="btn btn-large dropdown-toggle" data-toggle="dropdown" data-value="*" href="#">
         Any
         <span class="caret"></span>
     </a>
     <ul class="dropdown-menu" data-role="filter" data-attr="Brand">
-        <li class="tvFinderMenuChoice"><a href="#">Any</a></li>
-        {{#brands}}
-            <li class="tvFinderMenuChoice"><a href="#">{{.}}</a></li>
-        {{/brands}}
+        <li class="tvFinderMenuChoice"><a data-value="*" href="#">Any</a></li>
+        {{#items}}
+            <li class="tvFinderMenuChoice"><a href="#" data-value="{{.}}">{{.}}</a></li>
+        {{/items}}
     </ul>
 </div>
