update to create a separate DOM for each page render

--- a/template/ProductOffers.handlebars
+++ b/template/ProductOffers.handlebars
@@ -4,15 +4,14 @@
              data-name="{{name}}"
              data-rating="{{rating}}" data-size="{{size}}">
         <header>
-            <h1><a href="{{url}}" title="{{{name}}}">
+            <h1><a href="{{url}}" title="{{name}}">
                 <i data-img
                    data-src="{{image}}"
-                   data-alt="{{{name}}}"></i>
+                   data-alt="{{name}}"></i>
 
-                <div class="tvFinderProductName">{{{name}}}</div>
+                <div class="tvFinderProductName">{{name}}</div>
             </a></h1>
         </header>
-        <ul class="tvFinderProductDetails">{{{description}}}</ul>
         <p class="tvFinderProductPrice"><span class="tvFinderUsDollars">{{dollars}}</span><span
                 class="tvFinderUsCents">{{cents}}</span></p>
 
