rendering product info including ratings

--- a/template/ProductOffers.handlebars
+++ b/template/ProductOffers.handlebars
@@ -1,10 +1,8 @@
 {{#.}}
     <article class="tvFinderOffer" data-featured="{{@index}}" data-type="{{type}}"
-             data-brand="{{brand}}"
-             data-price="{{price}}"
-             data-name="{{name}}"
-             data-rating="{{rating}}" data-size="{{size}}">
-        <header data-item_id="{{item_id}}">
+             data-brand="{{brand}}" data-price="{{price}}" data-name="{{name}}"
+             data-rating="{{rating}}" data-size="{{size}}" data-item_id="{{item_id}}">
+        <header>
             <h1><a href="{{url}}" title="{{name}}">
                 <i data-img
                    data-src="{{image}}"
