adjust review and product models, add parse methods to convert arrays to attributes on the respective models

--- a/template/ProductTop.handlebars
+++ b/template/ProductTop.handlebars
@@ -3,3 +3,4 @@
                     <span style="width: {{ratingWidth}}px"
                           title="{{ratingDisplay}} out of 5 Stars"></span>
 </p>
+{{reviewsCount}} | Write a Review | Ask a Question
