better description truncation ...

--- a/template/SingleColumnTemplate.handlebars
+++ b/template/SingleColumnTemplate.handlebars
@@ -52,6 +52,9 @@
                 "deps": [
                     "lib/jquery.ui.core"
                 ]
+            },
+            "lib/cutstring": {
+                "exports": "CutString"
             }
         }
     });
