--- a/template/TvFinderPov.handlebars
+++ b/template/TvFinderPov.handlebars
@@ -5,13 +5,10 @@
 </h2>
 
 <div class="tvFinderOffers">
-    <div class="tvFinderMinPrice"><span class="tvFinderUsDollars">{{minPrice.dollars}}</span><span
-            class="tvFinderUsCents">{{minPrice.cents}}</span></div>
+    <div class="tvFinderMinPrice">{{formattedPrice minPrice.price}}</div>
     <div class="tvFinderMinSize">{{minPrice.size}}&rdquo;</div>
-    <div class="tvFinderMedianPrice"><span class="tvFinderUsDollars">{{medianPrice.dollars}}</span><span
-            class="tvFinderUsCents">{{medianPrice.cents}}</span></div>
+    <div class="tvFinderMedianPrice">{{formattedPrice medianPrice.price}}</div>
     <div class="tvFinderMedianSize">{{medianPrice.size}}&rdquo;</div>
-    <div class="tvFinderMaxPrice"><span class="tvFinderUsDollars">{{maxPrice.dollars}}</span><span
-            class="tvFinderUsCents">{{maxPrice.cents}}</span></div>
+    <div class="tvFinderMaxPrice">{{formattedPrice maxPrice.price}}</div>
     <div class="tvFinderMaxSize">{{maxPrice.size}}&rdquo;</div>
 </div>
