support simple http access to target/index.html

--- a/template/ProductOffers.handlebars
+++ b/template/ProductOffers.handlebars
@@ -3,7 +3,7 @@
              data-brand="{{brand}}" data-price="{{price}}" data-name="{{name}}"
              data-rating="{{rating}}" data-size="{{size}}" data-item_id="{{item_id}}">
         <header>
-            <h1><a href="{{url}}" title="{{name}}">
+            <h1><a href="#" title="{{name}}">
                 <i data-img
                    data-src="{{image}}"
                    data-alt="{{name}}"></i>
