--- a/template/SingleColumnTemplate.handlebars
+++ b/template/SingleColumnTemplate.handlebars
@@ -3,14 +3,14 @@
     <section class="appBody"></section>
     <footer class="appFooter"></footer>
 </article>
-<script src="/usr/local/lib/node_modules/requirejs/require.js"></script>
+<script src="../node_modules/requirejs/require.js"></script>
 <script>
     require.config({
         "paths": {
             "app/TvFinderApp": "tvFinderApp-client", // comment to get components individually
-            "handlebars": "/usr/local/lib/node_modules/handlebars/dist/handlebars.runtime",
-            "Backbone": "/usr/local/lib/node_modules/backbone/backbone",
-            "underscore": "/usr/local/lib/node_modules/underscore/underscore",
+            "handlebars": "../node_modules/handlebars/dist/handlebars.runtime",
+            "Backbone": "../node_modules/backbone/backbone",
+            "underscore": "../node_modules/underscore/underscore",
             "jQuery": "lib/jquery-1.8.3",
             "content": "lib/content-client",
             "televisions": "lib/televisions-client"
