--- a/template/ProductAbout.handlebars
+++ b/template/ProductAbout.handlebars
@@ -15,6 +15,6 @@ About
             <li class="tvFinderMenuChoice"><a href="#">5</a></li>
         </ul>
     </div>
-    <button id="productAddToCartId" class="btn productAddToCart">Add To Cart</button></div>
+    <button class="btn btn-large disabled productAddToCart">Add To Cart</button></div>
 </div>
 <hr>
