--- a/template/SingleColumnTemplate.handlebars
+++ b/template/SingleColumnTemplate.handlebars
@@ -8,12 +8,13 @@
     require.config({
         "baseUrl": "..",
         "paths": {
-            //"app/TvFinderApp": "target/tvFinderApp-client", // comment to get components individually
+            "app/TvFinderApp": "target/tvFinderApp-client", // comment to get components individually
             "handlebars": "node_modules/handlebars/dist/handlebars.runtime",
             "Backbone": "node_modules/backbone/backbone",
             "underscore": "node_modules/underscore/underscore",
             "jQuery": "lib/jquery-1.8.3",
             "content": "lib/content-client",
+            "cart": "lib/cart-client",
             "televisions": "lib/televisions-client"
         },
         "shim": {
