--- a/template/SiteHeader.handlebars
+++ b/template/SiteHeader.handlebars
@@ -16,8 +16,8 @@
 
         <div class="walmartSignInText">to your account</div>
     </li>
-    <li class="walmartCartCell"><a class="walmartCartLink" href="#" title="View the 0 items in your cart">0
-        Items</a>
+    <li class="walmartCartCell"><a class="walmartCartLink" href="#" title="View your cart"><span class="plural">0
+        Items</span><span class="singular">1 Item</span></a>
 
         <div class="walmartCartText">in your cart</div>
     </li>
